# unmcp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  USAGE.md  notes.md  pyproject.toml  tst.json
.github/: CODEOWNERS
.github/workflows/: publish.yml
.mcp2cli/servers/: context7.json
.nomcp/: .settings.json
feature-x-tmp/: context7_query-docs_20260131_194600.json  context7_query-docs_20260131_194608.json  context7_query-docs_20260131_202217.json
src/mcp2cli/: __init__.py  cli.py  config.py  utils.py
src/mcp2cli/core/: __init__.py  daemon.py  process_manager.py
src/mcp2cli/models/: __init__.py  config.py
src/mcp2cli/services/: __init__.py  server_manager.py  tool_runner.py
src/nomcp/: __init__.py  cli.py  config.py  daemon.py  mcp_client.py  process_manager.py  utils.py
src/nomcp/core/: __init__.py  daemon.py  mcp_client.py  process_manager.py
src/nomcp/models/: __init__.py  config.py  process.py  tool.py
src/nomcp/services/: __init__.py  server_manager.py  tool_runner.py
src/unmcp/: __init__.py  cli.py  config.py  utils.py
src/unmcp/core/: __init__.py  daemon.py  process_manager.py
src/unmcp/models/: __init__.py  config.py  tool.py
src/unmcp/services/: __init__.py  server_manager.py  tool_runner.py
